Update to allow for fixed items. That shouldn't move at all

--- a/src/app.html
+++ b/src/app.html
@@ -124,20 +124,24 @@
 		<div class="handle"></div>
 		{{box}}
 	</div>
-	<div [ngGridItem]="{'dragHandle': '.handle', 'fixed': true, 'col': 2, 'row': 3}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
+	<div [ngGridItem]="{'dragHandle': '.handle', 'canCascade': false, 'col': 2, 'row': 3}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
 		<div class="handle"></div>
-		Fixed - moveable, resizable
+		Doesn't cascade, can drag, can resize
 	</div>
-	<div [ngGridItem]="{'dragHandle': '.handle', 'fixed': true, 'draggable': false, 'col': 1, 'row': 5}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
+	<div [ngGridItem]="{'dragHandle': '.handle', 'canCascade': false, 'canDrag': false, 'col': 1, 'row': 5}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
 		<div class="handle"></div>
-		Fixed - not moveable, resizable
+		Doesn't cascade, can't drag, can resize
 	</div>
-	<div [ngGridItem]="{'dragHandle': '.handle', 'fixed': true, 'resizable': false, 'col': 5, 'row': 2}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
+	<div [ngGridItem]="{'dragHandle': '.handle', 'canCascade': false, 'canResize': false, 'col': 5, 'row': 2}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
 		<div class="handle"></div>
-		Fixed - moveable, not resizable
+		Doesn't cascade, can drag, can't resize
 	</div>
-	<div [ngGridItem]="{'dragHandle': '.handle', 'fixed': true, 'resizable': false, 'draggable': false, 'col': 3, 'row': 4}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
+	<div [ngGridItem]="{'dragHandle': '.handle', 'canCascade': false, 'canResize': false, 'canDrag': false, 'col': 3, 'row': 4}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
 		<div class="handle"></div>
-		Fixed - not moveable, not resizable
+		Doesn't cascade, can't drag, can't resize
+	</div>
+	<div [ngGridItem]="{'dragHandle': '.handle', 'fixed': true, 'canResize': false, 'canDrag': false, 'col': 4, 'row': 3}" (itemChange)="updateItem(i, $event)" (resize)="onResize(i, $event)" (drag)="onDrag(i, $event)">
+		<div class="handle"></div>
+		Fixed, doesn't cascade, can't drag, can't resize
 	</div>
 </div>
